--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.3.3",
+    "react-text-mask": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
