--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-number-format": "^5.3.3",
     "react-text-mask": "^5.5.0"
   },
